docs-archive/apache-airflow-providers-git/0.0.3/_sources/_api/airflow/providers/git/hooks/git/index.rst.txt
airflow.providers.git.hooks.git
===============================

.. py:module:: airflow.providers.git.hooks.git


Attributes
----------

.. autoapisummary::

   airflow.providers.git.hooks.git.log


Classes
-------

.. autoapisummary::

   airflow.providers.git.hooks.git.GitHook


Module Contents
---------------

.. py:data:: log

.. py:class:: GitHook(git_conn_id = 'git_default', repo_url = None, *args, **kwargs)

   Bases: :py:obj:`airflow.hooks.base.BaseHook`


   Hook for git repositories.

   :param git_conn_id: Connection ID for SSH connection to the repository



   .. py:attribute:: conn_name_attr
      :value: 'git_conn_id'



   .. py:attribute:: default_conn_name
      :value: 'git_default'



   .. py:attribute:: conn_type
      :value: 'git'



   .. py:attribute:: hook_name
      :value: 'GIT'



   .. py:method:: get_ui_field_behaviour()
      :classmethod:



   .. py:attribute:: repo_url


   .. py:attribute:: user_name


   .. py:attribute:: auth_token


   .. py:attribute:: private_key


   .. py:attribute:: key_file


   .. py:attribute:: strict_host_key_checking


   .. py:attribute:: env
      :type:  dict[str, str]


   .. py:method:: set_git_env(key)


   .. py:method:: configure_hook_env()


